--- a/templates/employees/add_employee.html
+++ b/templates/employees/add_employee.html
@@ -101,6 +101,6 @@
     </div>
 </div>
 
-<script src="{{ url_for('static', filename='js/employee_form_validation.js') }}"></script>
+<script src="{{ url_for('static', filename='js/employee_add.js') }}"></script>
 
 {% endblock %}
