--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>REAL PROMOTION | ERP</title>
+    <title>REAL PROMOTION</title>
     
     <!-- AOS Animation -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
@@ -140,3 +140,4 @@
     <script src="{{ url_for('static', filename='js/base.js') }}"></script>
 </body>
 </html>
+
