Fix HTML formatting and structure in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -118,7 +118,7 @@
             <div class="row align-items-center">
                 <div class="col-md-4 text-md-start">
                     <h6 class="fw-bold mb-0">REAL PROMOTION</h6>
-                    <small class="text-muted">Est. 2005</small>
+                    <small class="text-muted"></small>
                 </div>
                 <div class="col-md-4 my-3 my-md-0">
                     <div class="social-glass">
@@ -140,4 +140,5 @@
     <script src="{{ url_for('static', filename='js/base.js') }}"></script>
 </body>
 </html>
+
 
