Update JavaScript file reference in edit_employee.html

--- a/templates/employees/edit_employee.html
+++ b/templates/employees/edit_employee.html
@@ -80,7 +80,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-<script src="{{ url_for('static', filename='js/employee.js') }}"></script>
+<script src="{{ url_for('static', filename='js/emp.js') }}"></script>
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     if (window.flatpickr) {
