Update employee template and script reference

--- a/templates/employees.html
+++ b/templates/employees.html
@@ -40,5 +40,6 @@
   </div>
 </div>
 
-<script src="{{ url_for('static', filename='js/employee.js') }}"></script>
+<script src="{{ url_for('static', filename='js/emp.js') }}"></script>
 {% endblock %}
+
