--- a/templates/employees/add_employee.html
+++ b/templates/employees/add_employee.html
@@ -103,6 +103,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script src="{{ url_for('static', filename='js/emp.js') }}"></script>
+<script src="{{ url_for('static', filename='js/pin.js') }}"></script>
 <script>
   // Initialize flatpickr after load
   document.addEventListener('DOMContentLoaded', function () {
