--- a/templates/employees/edit_employee.html
+++ b/templates/employees/edit_employee.html
@@ -81,6 +81,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script src="{{ url_for('static', filename='js/emp.js') }}"></script>
+<script src="{{ url_for('static', filename='js/pin.js') }}"></script>
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     if (window.flatpickr) {
