Refactor employee template to use 'content' block

--- a/templates/employees.html
+++ b/templates/employees.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block page_content %}
+{% block content %}
 
 <style>
 .employee-glass {
@@ -56,3 +56,4 @@
 </div>
 
 {% endblock %}
+
