--- a/templates/employees/add_employee.html
+++ b/templates/employees/add_employee.html
@@ -116,6 +116,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-<script src="{{ url_for('static', filename='js/emp_pincode.js') }}"></script>
+<script src="{{ url_for('static', filename='js/pin.js') }}"></script>
 
 {% endblock %}
